--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.1.1
 Flask-SocketIO==4.2.1
 Flask-WTF==0.14.3
 greenlet==0.4.15
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
